# DevOpsDemo-template-RustAsync

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml
api_tests/: tests.py
src/: config.rs  main.rs  metrics.rs
src/app/: mod.rs
src/app/handlers/: health_check.rs  mod.rs
src/app/state/: mod.rs
src/app/test/: mod.rs
