[package]
name = "app"
version = "0.1.1"
authors = ["Adam M. Szalkowski <adam@szalkowski.de>"]
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
anyhow = "*"
async-std = { version = "*", features = ["attributes"] }
chrono = "*"
futures = "*"
tide = "*"
http = "*"
lazy_static = "*"
prometheus = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"

[dev-dependencies]
tide-testing = "*"
